k8/article-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: article
  labels:
    app: article
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "3032"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: article
  template:
    metadata:
      labels:
        app: article
    spec:
      containers:
      - name: article-microservice
        image: raihanlh/article-microservice:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3002
          name: article-service
        - containerPort: 3102
          name: metrics
