k8/auth-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  labels:
    app: auth
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "3101"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth-microservice
        image: raihanlh/auth-microservice:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
          name: auth-service
        - containerPort: 3101
          name: metrics
