k8/db-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: postgres-db
        image: raihanlh/postgres_db:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
