k8/article-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: article-microservice
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "3032"
spec:
  type: NodePort
  ports:
  - name: article-service
    port: 3002
    targetPort: 3002
    nodePort: 30002
  - name: monitoring
    port: 3102
    targetPort: 3102
    nodePort: 30102
  selector:
    app: article
