k8/auth-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: auth-microservice
spec:
  type: NodePort
  ports:
  - name: http
    port: 3001
    targetPort: 3001
    nodePort: 30001
  selector:
    app: auth
