k8/db-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 5432
    targetPort: 5432
  selector:
    app: db
