k8/gateway-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-microservice
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app: gateway
